js file added and linked via html

--- a/frontend-bootcamp-main - Copy/index.html
+++ b/frontend-bootcamp-main - Copy/index.html
@@ -678,6 +678,7 @@
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
     ></script>
-    <script src="Js\script.js"></script>
+    <script src="Js/script.js"></script>
+    <script src="Js/main.js"></script>
   </body>
 </html>
